Operaciones Resultados POST y PUT
